--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "date-fns": "^2.2.1",
     "quasar": "^1.0.0",
     "validator": "^11.1.0",
     "vue-i18n": "^8.0.0"
