--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "date-fns": "^2.2.1",
+    "humps": "^2.0.1",
     "quasar": "^1.0.0",
     "validator": "^11.1.0",
     "vue-i18n": "^8.0.0"
