--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "connect-history-api-fallback": "^1.6.0",
     "cypress": "^3.4.1",
     "date-fns": "^2.2.1",
+    "express": "^4.17.1",
     "humps": "^2.0.1",
     "quasar": "^1.0.0",
+    "serve-static": "^1.14.1",
     "validator": "^11.1.0",
     "vue-i18n": "^8.0.0"
   },
