Feat (Account): Create test

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.1",
     "cypress": "^3.4.1",
     "date-fns": "^2.2.1",
+    "faker": "^4.1.0",
     "humps": "^2.0.1",
     "quasar": "^1.0.0",
     "validator": "^11.1.0",
